--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PnPfinder - Discover Print & Play Games</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>PnPFinder</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
-        <h1>PnPfinder</h1>
+        <h1>PnPFinder</h1>
         <div id="search-container">
             <input type="text" id="searchInput" placeholder="Search games...">
         </div>
@@ -17,26 +17,22 @@
 
     <main id="game-container">
         <div class="filters">
-            <h2>Filters</h2>
-            <div id="filter-section">
-                <!-- Filters will be dynamically added here by JavaScript -->
-            </div>
+            <!-- Filters will be dynamically populated by JavaScript -->
         </div>
 
         <div id="game-list">
-            <!-- Game cards will be dynamically added here by JavaScript -->
+            <!-- Game cards will be dynamically populated here -->
         </div>
 
         <div id="pagination">
-            <!-- Pagination controls will be dynamically added here by JavaScript -->
+            <!-- Pagination controls will be added here -->
         </div>
-
     </main>
 
     <footer>
-        <p>&copy; 2025 PnPfinder</p>
+        <p>&copy; 2024 PnPFinder</p>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
