--- a/index.html
+++ b/index.html
@@ -1,38 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-theme="dark">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PnPFinder</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>PnPFinder</title>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/css/style.css" />
+
+  <!-- CSV parsing -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
+
+  <!-- App -->
+  <script type="module" src="/js/script.js" defer></script>
+
+  <meta name="color-scheme" content="dark light" />
 </head>
 <body>
+  <header class="site-header wrap" role="banner">
+    <div class="brand">
+      <h1>PnPFinder</h1>
+      <p class="tagline">Discover great print-and-play games.</p>
+    </div>
 
-    <header>
-        <h1>PnPFinder</h1>
-        <div id="search-container">
-            <input type="text" id="searchInput" placeholder="Search games...">
-        </div>
-    </header>
+    <div class="controls">
+      <div class="search">
+        <label for="q" class="sr-only">Search</label>
+        <input id="q" name="q" type="search" placeholder="Search title, designer, publisher, description…" aria-label="Search games" autocomplete="off" />
+      </div>
 
-    <main id="game-container">
-        <div class="filters">
-            <!-- Filters will be dynamically populated by JavaScript -->
-        </div>
+      <div class="view-toggle" role="group" aria-label="View mode">
+        <button id="viewCards" class="toggle active" aria-pressed="true" title="Card view">Cards</button>
+        <button id="viewList" class="toggle" aria-pressed="false" title="List view">List</button>
+      </div>
+    </div>
+  </header>
 
-        <div id="game-list">
-            <!-- Game cards will be dynamically populated here -->
-        </div>
+  <main class="wrap" id="main" role="main">
+    <section class="filters" aria-label="Filters">
+      <details open>
+        <summary>Filters</summary>
+        <form id="filtersForm">
+          <!-- Filters auto-generated here -->
+          <div id="filtersGrid" class="filters-grid" aria-live="polite"></div>
 
-        <div id="pagination">
-            <!-- Pagination controls will be added here -->
-        </div>
-    </main>
+          <div class="filter-actions">
+            <button type="button" id="clearFilters" class="secondary">Clear</button>
+            <button type="submit" id="applyFilters" class="primary">Apply</button>
+          </div>
+        </form>
+      </details>
+    </section>
 
-    <footer>
-        <p>&copy; 2024 PnPFinder</p>
-    </footer>
+    <section aria-live="polite" aria-busy="true">
+      <div id="resultsMeta" class="results-meta"></div>
+      <div id="cards" class="cards" role="list"></div>
 
-    <script src="js/script.js"></script>
+      <nav id="pager" class="pager" aria-label="Pagination" hidden>
+        <button class="page-btn" data-page="prev" aria-label="Previous page">‹</button>
+        <div id="pageNumbers" class="page-numbers" role="group" aria-label="Page numbers"></div>
+        <button class="page-btn" data-page="next" aria-label="Next page">›</button>
+      </nav>
+    </section>
+  </main>
+
+  <footer class="site-footer wrap">
+    <small>© <span id="year"></span> PnPFinder • Community-run index for print-and-play games</small>
+  </footer>
 </body>
 </html>
