--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="site-header wrap" role="banner">
     <div class="brand">
       <h1>PnPFinder</h1>
-      <p class="tagline">Discover great print-and-play games.</p>
+      <p class="tagline">Search for and discover great print-and-play games.</p>
     </div>
 
     <div class="controls">
