--- a/tutorials.html
+++ b/tutorials.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PnPFinder — Print-and-Play Games</title>
+  <title>PnPFinder — Tutorials</title>
   <meta name="color-scheme" content="dark light" />
   <link rel="stylesheet" href="/css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js" defer></script>
-  <script type="module" src="/js/script.js" defer></script>
+  <script type="module" src="/js/tutorials.js" defer></script>
 </head>
 <body>
   <header class="site-header wrap" role="banner">
     <div class="brand">
       <h1><a class="brand-link" href="/">PnPFinder</a></h1>
-      <p class="tagline">Search for and discover great print-and-play games.</p>
+      <p class="tagline">Video tutorials for crafting PnP components.</p>
 
       <!-- Top-level navigation -->
       <nav class="top-nav" aria-label="Primary">
-        <a href="/" class="nav-link active" aria-current="page">Games</a>
-        <a href="/tutorials.html" class="nav-link">Tutorials</a>
+        <a href="/" class="nav-link">Games</a>
+        <a href="/tutorials.html" class="nav-link active" aria-current="page">Tutorials</a>
       </nav>
     </div>
 
     <div class="controls">
       <div class="search">
-        <label for="q" class="sr-only">Search games</label>
-        <input id="q" type="search" placeholder="Search title, designer, publisher, description…" autocomplete="off" />
+        <label for="q" class="sr-only">Search tutorials</label>
+        <input id="q" type="search" placeholder="Search component, title, creator, description…" autocomplete="off" />
       </div>
 
       <div class="view-toggle" role="group" aria-label="View mode">
@@ -37,9 +37,8 @@
         <label for="sortBy" class="sr-only">Sort by</label>
         <select id="sortBy" aria-label="Sort by">
           <option value="relevance">Relevance</option>
-          <option value="newest">Newest</option>
           <option value="az">A–Z</option>
-          <option value="release-asc">Release Year (oldest)</option>
+          <option value="creator">Creator</option>
         </select>
       </div>
 
@@ -50,18 +49,7 @@
   </header>
 
   <main id="main" class="wrap" role="main" aria-busy="true">
-    <details class="filters" open>
-      <summary>Filters</summary>
-      <form id="filtersForm">
-        <div id="filtersGrid" class="filters-grid" aria-live="polite"></div>
-
-        <div class="filter-actions">
-          <button type="button" id="clearFilters" class="secondary">Clear</button>
-          <button type="submit" id="applyFilters" class="primary">Apply</button>
-        </div>
-      </form>
-    </details>
-
+    <!-- No filters here by design -->
     <div id="resultsMeta" class="results-meta" aria-live="polite"></div>
 
     <section id="cards" class="cards" role="list"></section>
