--- a/game.html
+++ b/game.html
@@ -14,6 +14,13 @@
     <div class="brand">
       <h1><a class="brand-link" href="/">PnPFinder</a></h1>
       <p class="tagline">Game details</p>
+
+      <!-- Top-level navigation -->
+      <nav class="top-nav" aria-label="Primary">
+        <a href="/" class="nav-link">Games</a>
+        <a href="/tutorials.html" class="nav-link">Tutorials</a>
+        <a href="/resources.html" class="nav-link">Resources</a>
+      </nav>
     </div>
 
     <div class="controls">
@@ -25,7 +32,6 @@
 
   <main class="wrap" id="detailMain" role="main" aria-busy="true">
     <article id="gameDetail" class="detail" hidden>
-      <!-- HERO: image on top, then meta -->
       <header class="detail-hero">
         <div class="detail-media">
           <div class="thumb detail-thumb" id="detailThumb" aria-hidden="true"></div>
@@ -44,7 +50,6 @@
         </div>
       </header>
 
-      <!-- INFO SECTIONS -->
       <section class="detail-sections">
         <section class="detail-section">
           <h3>Overview</h3>
