--- a/tutorials.html
+++ b/tutorials.html
@@ -19,6 +19,7 @@
       <nav class="top-nav" aria-label="Primary">
         <a href="/" class="nav-link">Games</a>
         <a href="/tutorials.html" class="nav-link active" aria-current="page">Tutorials</a>
+        <a href="/resources.html" class="nav-link">Resources</a>
       </nav>
     </div>
 
@@ -49,7 +50,6 @@
   </header>
 
   <main id="main" class="wrap" role="main" aria-busy="true">
-    <!-- NEW: Filters (Component) -->
     <details class="filters" open>
       <summary>Filters</summary>
       <form id="filtersForm">
