--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <a href="/" class="nav-link active" aria-current="page">Games</a>
         <a href="/tutorials.html" class="nav-link">Tutorials</a>
         <a href="/resources.html" class="nav-link">Resources</a>
+        <a href="/submit.html" class="nav-link">Submit</a>
+
       </nav>
     </div>
 
